[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama_stream"
version = "0.1.0"
description = "Real-time Stream Processing with MLX Integration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "LLAMA Stream Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "numpy>=1.20.0",
    "mlx>=0.0.5",
    "kafka-python>=2.0.0",
    "pulsar-client>=3.0.0",
    "pandas>=1.3.0",
    "cryptography>=37.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.19.0",
    "pytest-cov>=3.0.0",
    "black>=22.3.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pylint>=2.13.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.18.0",
]

[project.urls]
Documentation = "https://github.com/llama-stream/llama_stream#readme"
Source = "https://github.com/llama-stream/llama_stream"
Issues = "https://github.com/llama-stream/llama_stream/issues"

[project.scripts]
llama-stream = "llama_stream:main"

[tool.setuptools]
packages = ["llama_stream"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pylint]
max-line-length = 88
disable = ["C0103", "C0111", "R0903", "C0303"]
